# dbt_ammodepot

./: .dockerignore  .flake8  .gitignore  CLAUDE.md  Connections Audit - Ammo Depot.xlsx  DISCOVERY_POWERBI.md  DISCOVERY_SNOWFLAKE.sql  OUR_DELIVERIES.MD  README.md  pyproject.toml
.claude/: CLAUDE.md
airbyte-ec2/: AIRBYTE_INSTALL.md  CAPACITY_PLANNING.md  EXPERIMENT.md  README.md  airbyte-cleanup.sh  airbyte-values-prev.yaml  airbyte-values.yaml  deploy.sh  disk-alert.sh
ammodepot/: .env.example  .gitignore  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
ammodepot_lakehouse/: .gitignore  dbt_project.yml  profiles.yml
docs/: AIRBYTE_2_0_UPGRADE_PLAN.md  AIRBYTE_AUTO_REMEDIATION_RUNBOOK.md  AIRBYTE_INCIDENT_RUNBOOK.md  AIRBYTE_MAINTENANCE.md  AIRBYTE_RESOURCE_OPTIMIZATION.md  AUDIT_BACKLOG.md  CONSOLIDATION_EXECUTIVE_SUMMARY.md  COST_OPTIMIZATION_PROPOSAL.md  PIPELINE_ASSESSMENT.md  POC_S3_DUCKDB_LAKEHOUSE.md  SNOWFLAKE_COST_DASHBOARD.md  snowflake_access_setup.md
ecs/: Dockerfile  README.md  deploy.sh  entrypoint.sh  eventbridge-rule.json  pyproject.toml  refresh_iceberg.py  task-definition.json
lambda/airbyte_auto_remediate/: Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  test_progress_gate.py
lambda/airbyte_auto_remediate/iam-policies/: eventbridge-rule.json  eventbridge-trust.json  lambda-execution-role.json  lambda-trust.json
lambda/airbyte_auto_remediate/ssm-payloads/: cancel_and_restart.json.tmpl  capture_evidence.json.tmpl  kind_bounce.json.tmpl
projects/: .gitignore
scripts/: disk-alert.sh
(+1322 files in other folders)
