[project]
name = "dbt-ammodepot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dbt-redshift>=1.10.1",
    "dbt-snowflake>=1.11.2",
    "openpyxl>=3.1.5",
    "pgeocode>=0.5.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.1",
    "snowflake-connector-python>=4.3.0",
    "sqlfluff>=4.0.4",
    "sqlfluff-templater-dbt>=4.0.4",
    "streamlit>=1.55.0",
]
