[project]
name = "airbyte-auto-remediate"
version = "0.1.0"
description = "AWS Lambda — autonomous cancel + restart of stuck Airbyte → S3 Iceberg syncs (Phase 2 of Airbyte Observability)."
requires-python = ">=3.11,<3.12"

dependencies = [
    "boto3>=1.34,<2.0",
    "snowflake-connector-python>=3.7,<4.0",
    "cryptography>=42.0,<46.0",
    "requests>=2.31,<3.0",
]

[tool.uv]
package = false
